--- a/angular.json
+++ b/angular.json
@@ -121,6 +121,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ng-freshers"
+    }
+  },
+  "defaultProject": "ng-freshers",
+  "cli": {
+    "analytics": "9e4df39a-b92d-48ab-89b5-83a908dc37ca"
+  }
 }
